# slides_gen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  constants.py  exceptions.py  utils.py
app/infrastructure/db/: mysql.py  task_repository.py  template_repository.py
app/infrastructure/llm/: base.py  concurrency.py  openai_like_client.py  prompt_builder.py  structured_prompt_builder.py
app/infrastructure/ppt_master/: pptx_builder.py  pptx_to_svg_adapter.py  project_workspace.py  svg_to_pptx_adapter.py  template_rule_parser.py
app/infrastructure/storage/: ftp.py
app/schemas/: common.py  structured_generation.py  task.py  template.py
app/services/: bootstrap.py  builtin_template_service.py  container.py  hybrid_pptx_exporter.py  orchestration_service.py  pptx_builder_service.py  pptx_export_service.py  slide_generation_service.py  svg_validation_service.py  task_service.py  template_import_service.py  template_service.py
docs/: concurrency_design.md  development_notes.md  fastapi_service_architecture.md  hybrid_generation_design.md  mysql_ftp_persistence_design.md  mysql_ftp_persistence_design_v2.md  prd_fastapi_svg_ppt_service.md
sql/: mysql_init.sql  mysql_init_v2.sql
tests/: conftest.py  test_concurrency.py  test_ftp_storage.py  test_health.py  test_llm_client.py  test_prompt_builder.py  test_schemas.py  test_slide_generation_service.py  test_structured_generation.py  test_svg_validation.py  test_tasks_api.py  test_templates_api.py  test_utils.py
(+4 files in other folders)
