[project]
name = "slides_gen_server"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "pymysql>=1.1,<2",
    "python-multipart>=0.0.9,<1",
    "python-pptx>=0.6.21",
    "pydantic>=2.8,<3",
    "python-dotenv>=1.0,<2",
    "openai>=2.44.0",
    "pytest>=8.0,<9",
    "httpx2>=2.0,<3"
]

[tool.uv]
index-url = "https://mirrors.tencent.com/pypi/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

